# covid19-research

./: .gitignore  README.md  package-lock.json  package.json  webpack.config.js
backend/: .gitignore  README.md  index.html
backend/aws/: README.md  database.md
backend/aws/api/: api-template.yaml  lambda-functions.yaml
backend/aws/api/get-article/: index.py
backend/aws/py/: upload_articles.py
backend/aws/store/: article-bucket.yaml  main-table.yaml  metadata-crawler.yaml  template-bucket.yaml
backend/aws/store/csv-to-parquet/: GlueApp.scala
backend/aws/store/register-function/: index.py
backend/graph/: README.md  package-lock.json  package.json  service.js
backend/graph/test/: index.html
backend/render/: .gitignore  README.md  package-lock.json  package.json  webpack.config.js
backend/render/src/: data.js  index.js  render.js  wgs84.js
data/: COVID-19 - Named clusters.ipynb
data/pipelines/: notebook2dgraph.py  pyproject.toml  requirements.txt
docs/: index.html  main.js
frontend/: .gitignore  README.md  package-lock.json  package.json  server.js  webpack.config.js
frontend/src/: index.js
frontend/src/components/: app.vue  explorer.vue  explorer2.vue  full-text.vue  intro.vue  paper.vue
frontend/src/routes/: index.js
frontend/src/utils/: arrays.js
src/: app.vue  index.js
src/components/: app.vue  example.vue  intro.vue
src/routes/: index.js
src/utils/: arrays.js  index.js
