[tool.poetry]
name = "metasphere-data-pipeline"
version = "0.1.0"
description = ""
authors = ["Andrea Giacobino <no.andrea@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ipython = "nbconnvert"
nbconvert = "^5.6.1"
pydgraph = "^20.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
